# tracer

./: .gitignore  Cargo.toml
.github/workflows/: render.yml
assets/: cornell-box.glb
output/: step10.ppm  step11.ppm  step12.ppm  step2.ppm  step3.ppm  step4.ppm  step5.ppm  step6.ppm  step7.ppm  step8.ppm  step9.ppm
src/: camera.rs  diagnostics.rs  environment.rs  gltf_loader.rs  hit.rs  integrator.rs  light.rs  main.rs  material.rs  math.rs  output.rs  renderer.rs  rng.rs  sampler.rs  types.rs
src/integrator/: direct_lighting.rs
src/material/: classic.rs
