[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
gltf = "1.4.1"
rayon = "1.10"

[features]
default = []
stats = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
